--- a/ShopBridgAPI/appsettings.json
+++ b/ShopBridgAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ItemContextConnectionString": "server=LAPTOP-MNK6GA8K;database=ItemDB;Trusted_Connection=true"
+  }
 }
