added pagination logic for get items, removed moq extension helper class.

--- a/ShopBridgeAPI/appsettings.json
+++ b/ShopBridgeAPI/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ItemContextConnectionString": "server=LAPTOP-MNK6GA8K;database=ItemDB;Trusted_Connection=true"
-  }
+  },
+  "ItemsPerPage" :  5
 }
