--- a/DataAccess.Tests/DataAccess.Tests.csproj
+++ b/DataAccess.Tests/DataAccess.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
     <PackageReference Include="MockQueryable.Core" Version="5.0.1" />
